--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".ItemFragment"
+        tools:context=".fragments.ItemFragment"
         tools:listitem="@layout/fragment_item"
         android:background="@color/black"
         android:visibility="invisible"/>
